
  * Discovered that the Makefile.am needs to be changed for that the headers
	will install from their new location in panda/, so I had a look into
	that as well...

========================== 0.3.1 Released =====================================

  * Implemented xmalloc in memory.c so that I could simplify the malloc calls
	in the rest of the code in the library... Also changed all of the 
	malloc calls in the library to use it...

  * Resolved the namespace problems by renaming all function calls to use
	the naming scheme "panda_<<>>". There are #defines to the old names in
	panda/legacy.h

  * Note that the namespace changes were partially made by a script, so if 
	 there are any typos, could you please let me know... Things still
	 compile, so at least the typos are consistent.
	
  * Implemented template pages for PDF documents. These are created via the
	panda_newpage() call with a page size of gPageSizeTemplateA4. They can
	then be asserted on a page using panda_asserttemplate().

  * Fixed the namespace on variable names as well... This included moving some
	stuff out of the gcc reserved namespace (__*) in objects.h.

  * The namespace changes were lots of fun (not). I suggest that no-one ever
	do them again...

  * Added legacymain.c to check that the legacy function mappings and stuff
	actually work

  * BACKPORTED FROM PANDA 0.3.2: Fixed some small problems with the
	configure script, added the Makefile.am to the distribution and made
	some small changes requested by the users...

  * Started rearranging the demo document so that it shows the features of
	Panda in a less confusing manner.

  * If you failed to setup font details before writing a string, Panda would
	crash. It now works on reasonable defaults.

  * Made dmalloc stop complaining about freeing NULL pointers, I assume this 
	makes the code more portable.

  * Fixed a lot of memory leaks that were hiding in the code, dmalloc listed
	them for me.