@@ -3,10 +3,10 @@ SUBDIRS = panda man
 noinst_PROGRAMS = pandademo pandademolegacy
 lib_LIBRARIES = libpanda.a
 
-pandademo_SOURCES = curves.c date.c font.c info.c main.c memory.c panda.c trailer.c error.c images.c internal.c objects.c text.c utility.c xref.c
+pandademo_SOURCES = curves.c date.c font.c info.c main.c memory.c panda.c trailer.c error.c images.c internal.c objects.c template.c text.c utility.c xref.c
 
-pandademolegacy_SOURCES = curves.c date.c font.c info.c legacymain.c memory.c panda.c trailer.c error.c images.c internal.c objects.c text.c utility.c xref.c
+pandademolegacy_SOURCES = curves.c date.c font.c info.c legacymain.c memory.c panda.c trailer.c error.c images.c internal.c objects.c template.c text.c utility.c xref.c
 
-libpanda_a_SOURCES = curves.c date.c font.c info.c memory.c panda.c trailer.c error.c images.c internal.c objects.c text.c utility.c xref.c
+libpanda_a_SOURCES = curves.c date.c font.c info.c memory.c panda.c trailer.c error.c images.c internal.c objects.c template.c text.c utility.c xref.c
 
 
