@@ -90,3 +90,8 @@ K * Work out how to get autoconf to define HAVE_LIBTIFF et al inside the source
 
   * Save the state that someone is built for lines and curves and stuff, and
 	allow them to restore that state later on if they would like to...
+
+  * Line colours and fill colours don't actually work... Find out why and make
+	it work!
+
+  * Memory leaks
